# FastTTS

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/fasttts/: bert.py
src/fasttts/demo/: batch.py  compiler.py  main.py
src/fasttts/model/bert/: __init__.py  bert.py  load.py
src/fasttts/model/kokoro/: convolution_kernel.cpp  fix.py  istftnet.py  model.py  modules.py  nhwc_network.py  pipeline.py
src/fasttts/utils/: batcher.py
src/fasttts/utils/nested_tensor/: __init__.py  jagged_attention.py
