[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fasttts"
version = "0.0.1"
description = "A simple example project using setuptools"
authors = [
  { name="Ningcong Chen", email="nchen3@wpi.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChenNingCong/FastTTS" 

[project.optional-dependencies]
# Dependencies for development or testing, which aren't needed for normal use.
dev = [
    "pytest",
    "black",
]